# zxbasic-rust

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: deploy.yml
crates/zxbasic-core/: Cargo.toml
crates/zxbasic-core/src/: charset.rs  display.rs  expression.rs  fp_format.rs  lib.rs  program.rs  system.rs  value.rs
crates/zxbasic-native/: Cargo.toml
crates/zxbasic-native/src/: main.rs
crates/zxbasic-web/: Cargo.toml
crates/zxbasic-web/src/: lib.rs
tools/: Cargo.toml
web/: index.html
