[package]
name = "zxbasic-web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "wasm-bindgen frontend for zxbasic-core."

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
# Skip wasm-opt — install binaryen via `brew install binaryen` to re-enable.
wasm-opt = false

[dependencies]
zxbasic-core = { workspace = true }
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
]
